--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,17 @@ kotlin = "2.1.10"
 android-minSdk = "24"
 android-compileSdk = "34"
 kuzu = "0.11.1"
+junit = "4.13.2"
+mockito-core = "4.0.0"
+mockito-kotlin = "4.0.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kuzu = { module = "com.kuzudb:kuzu", version.ref = "kuzu" }
+junit = { module = "junit:junit", version.ref = "junit" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito-core" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
+
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
