--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,9 +1,4 @@
 jdk:
-  - openjdk21
-
-before_install:
-  - sdk install java 21-open
-  - sdk use java 21-open
-
+  - openjdk17
 install:
-  - ./gradlew build publishToMavenLocal
+  - ./gradlew publishToMavenLocal -x test
